<resources>
    <string name="app_name">Welcome</string>
    <string name="ar">AR</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="current_position">currentPosition</string>
    <string name="no_position_available">Sorry! No position available.</string>
    <string name="service_not_available">No Service Available</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="origin_name">Enter Origin</string>
    <string name="destination_name">Enter Destination</string>
    <string name="calculate_route">Calculate Route</string>
    <string name="geocode_success">Success</string>
    <string name="geocode_failure">Failure</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="stop_navigation">Stop Navigation</string>
    <string name="current_location">Current Location</string>
    <string name="destination_reached">Destination reached</string>
    <string name="dialog_title">Go ahead! You are close to your destination.</string>
    <string name="dialog_open_camera">Do you want to open your Camera for AR View?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mapARView">Map + AR</string>
    <string name="mapPictureView">Map + Picture</string>
    <string name="mapView">Map</string>
    <string name="picture">Picture</string>
    <string name="route1">Oxford to Aldi</string>
    <string name="route2">Oxford to UKM</string>
    <string name="route3">Oxford to Bürgebüro</string>
    <string name="route4">Oxford to FC Gievenbeck</string>
    <string name="route5">Oxford to Sportpark</string>
</resources>
