<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/mapARButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapARView"
        android:onClick="onMapArClick"/>

    <Button
        android:id="@+id/MapPictureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapPictureView"
        android:onClick="onMapPictureClick"/>

    <Button
        android:id="@+id/MapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapView"
        android:onClick="onMapClick"/>
</LinearLayout>