<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MapActivity"
    >

    <com.skobbler.ngx.map.SKMapViewHolder
        android:id="@+id/view_group_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@mipmap/ic_my_location"
        android:contentDescription="@string/current_position"

        android:layout_above="@+id/button"
        android:layout_alignParentEnd="true" />


   <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ar"
        android:id="@+id/switch1"
       android:layout_below="@+id/destination"
       android:layout_alignParentEnd="true" />

    <EditText
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/origin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/switch1"
        android:hint = "@string/origin_name"
       />

    <EditText
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:layout_below="@+id/origin"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/switch1"
        android:hint = "@string/destination_name"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_route"
        android:id="@+id/button"
        android:onClick="onButtonClicked"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
