<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layoutAR"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MapArActivity"
        >

        <com.skobbler.ngx.map.SKMapViewHolder
            android:id="@+id/view_group_mapAR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locateButtonAR"
            android:src="@mipmap/ic_my_location"
            android:contentDescription="@string/current_position"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/startNavigationMapAR" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_navigation"
            android:layout_alignParentBottom="true"
            android:id="@+id/startNavigationMapAR"
            android:onClick="startNavigation"/>


       <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ar"
            android:id="@+id/switchAR"
            android:layout_alignEnd="@+id/view_group_mapAR"
            android:layout_alignParentEnd="true" />

        <!--<EditText
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/originAR"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/switchAR"
            android:hint = "@string/origin_name"
           />

        <EditText
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/destinationAR"
            android:layout_below="@+id/originAR"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/switchAR"
            android:hint = "@string/destination_name"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_route"
            android:id="@+id/buttonAR"
            android:onClick="onButtonClicked"
            android:layout_marginBottom="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarAR"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>-->

    </RelativeLayout>

    <!-- Layout for the navigation drawer -->
    <ListView android:id="@+id/left_drawer_mapAR"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="multipleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/colorPrimary"/>

</android.support.v4.widget.DrawerLayout>
